--- a/1.css
+++ b/1.css
@@ -1,18 +1,29 @@
-html, body {
+html {
 	height: 100%;
 }
 
 body {
+	height: 100%;
 	font-family: sans-serif;
 	overflow: hidden;
+	padding: 0;
+	margin: 0;
 }
 
-input {
+#log {
+	height: 300px;
+	overflow: hidden;
+	overflow-x: auto;
+}
+
+.input-line {
 	position: absolute;
 	left: 10px;
-	top: 10px;
+	bottom: 10px;
 	right: 10px;
 	width: calc(100% - 20px);
 	border: 1px solid #AAA;
-	opacity: 0.75;
+	background-color: #FFF;
+	font-size: 20px;
+	/*opacity: 0.75;*/
 }
