--- a/1cc.css
+++ b/1cc.css
@@ -1,11 +1,11 @@
 /* https://developers.google.com/cast/docs/receiver_apps */
 
-html, body {
-	width: 100%;
+html {
 	height: 100%;
 }
 
 body {
+	height: 100%;
 	font-family: 'Droid Sans', sans-serif;
 	overflow: hidden;
 	padding: 5%;
@@ -13,6 +13,12 @@ body {
 	font-size: 0.8em;
 	background-color: #FFFFFF;
 	color: #000000;
+}
+
+#log {
+	height: 300px;
+	overflow: hidden;
+	overflow-x: auto;
 }
 
 canvas {
@@ -25,6 +31,31 @@ canvas {
 
 video {
 	position: absolute;
-	left: 50px;
+	/*right: 50px;
 	top: 50px;
+	z-index: 2;*/
+	/*opacity: 0.8;*/
+	right: 0;
+	bottom: 0;
+	z-index: 2;
+	max-width:  50%;
+	max-height: 50%;
+}
+
+.mosca {
+	position: absolute;
+	left: 25px;
+	top: 25px;
+	width: 50px;
+	height: 50px;
+	/*background-color: #F00;*/
+	background-repeat: no-repeat;
+	background-size: contain;
+	background-image: url(http://cdn.nexttv.sapo.pt/user/channels/9f/365/30168/logo245da04a44cb2e48a5d1248af17f5136-500x500.png);
+	z-index: 3;
+}
+
+.video-on-fullscreen video {
+	max-width:  none;
+	max-height: none;
 }
