--- a/2/chromecast/index.css
+++ b/2/chromecast/index.css
@@ -5,12 +5,12 @@ html {
 body {
 	height: 100%;
 	overflow: hidden;
-	background-color: #FFF;
+	background-color: #000;
 	padding: 0;
-	margin: 0;
+	margin:  0;
 }
 
-#log {
-	font-family: monospace;
-	font-size: 14px;
+video {
+	width:  100%;
+	height: 100%;
 }
