--- a/2/browser/index.css
+++ b/2/browser/index.css
@@ -13,10 +13,15 @@ body {
 
 label {
 	display: inline-block;
-	width: 80px;
+	width: 100px;
 	font-weight: bold;
 }
 
 input[type=text] {
-	width: 200px;
+	value: 100;
+}
+
+#video-url,
+#poster-url {
+	width: 400px;
 }
